fix spacing on search page
this just does a few tweaks to the search page, basically

- decreasing slightly the space between filters and results
- making the filters slightly wider
- reducing the margin between the top of the search results and the
  courses / resources toggle

overall this brings the search page more in line with our designs.

part of #226
pr #235

--- a/src/css/search-filter.scss
+++ b/src/css/search-filter.scss
@@ -42,16 +42,7 @@
   justify-content: space-between;
 }
 
-.facets,
-.active-search-filters {
-  @include breakpoint(desktop) {
-    width: 90%;
-  }
-}
-
 .facets {
-  margin-bottom: 20px;
-
   .divider {
     padding-top: 20px;
   }
